# ImageToText

./: .gitignore  README.md  imagetotext-tests.py  imagetotext.py  testimagegenerator.py
CImageToText/: CMakeLists.txt  ImageToTextConverter.cpp  ImageToTextConverter.h  ImageToTextConverter.out  ImageToTextConverterTests.cpp  ImageToTextConverterTests.out  cimagetotext.cpp  setup.py  wat
CImageToText/python/: CMakeLists.txt  setup.py.in
CImageToText/src/: CMakeLists.txt  ImageToTextConverter.cpp  ImageToTextConverter.h  ImageToTextConverterTests.cpp  ImageToTextConverterTests.out  cimagetotext.cpp
